fix small styling issue on smaller screens

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -14,6 +14,7 @@
  .lightbox {
    margin: auto;
    position: relative;
+   max-width: 80vw;
  }
 
  .lightbox__content {
